# salt

./: CMakeLists.txt  README.md
include/: salt.h
include/salt_vec/: salt_vec.h
scripts/: docker_init.sh
test/: main.cpp
